tests/custom/STARIS_2022/operation-type-errors/flatten-type-error-01/stderr.expected
Error:
    flatten-type-error.essence:2:24:
  |
2 | such that b = (flatten(false) = [false])
  |                        ^^^^^
Type error:
	Expected: "List or Matrix "
	Got: bool

cat: *.solution: No such file or directory
